@@ -1,5 +1,5 @@
 <?php
-//	Version: 0.8; PrettyUrls
+//	Version: 0.9; PrettyUrls
 
 //	Admin chrome
 $txt['pretty_chrome_title'] = 'Pretty URLs Administration';
@@ -8,7 +8,7 @@ $txt['pretty_chrome_menu_maintenance'] = 'Maintenance';
 
 //	Settings page
 $txt['pretty_chrome_caption_settings'] = 'Settings caption';
-$txt['pretty_chrome_title_settings'] = 'Pretty URLs Settings';
+$txt['pretty_chrome_page_title_settings'] = 'Pretty URLs Settings';
 $txt['pretty_core_settings'] = 'Core settings';
 $txt['pretty_enable'] = 'Enable URL rewriting';
 $txt['pretty_filters'] = 'URL rewriting filters';
@@ -16,7 +16,13 @@ $txt['pretty_save'] = 'Save changes';
 
 //	Maintenance page
 $txt['pretty_chrome_caption_maintenance'] = 'Run some maintenance tasks';
-$txt['pretty_chrome_title_maintenance'] = 'Pretty URLs Maintenance';
+$txt['pretty_chrome_page_title_maintenance'] = 'Pretty URLs Maintenance';
 $txt['pretty_run_maintenance'] = 'Run maintenance tasks';
+
+//	Edit filters page
+$txt['pretty_chrome_caption_filters'] = 'A tool to edit the filters array. The array is formatted here in the <a href="http://www.json.org/">JSON</a> format. Be careful, the JSON parser is rather strict.';
+$txt['pretty_chrome_page_title_filters'] = 'Pretty URLs Filters Tool';
+$txt['pretty_chrome_title_filters'] = 'Filters Tool';
+$txt['pretty_no_json'] = 'The PHP JSON extension is required for this tool. Consider upgrading to PHP 5.2.';
 
 ?>
